<package format="2">
	<name>rosmon_msgs</name>
	<description>
		Messages for rosmon, the node launcher and monitor for ROS.
		rosmon is a replacement for the roslaunch tool, focused on performance,
		remote monitoring, and usability.
	</description>
	<version>2.2.1</version>
	<license>BSD</license>
	<author email="max.schwarz@uni-bonn.de">Max Schwarz</author>
	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>message_generation</depend>
	<depend>std_msgs</depend>
</package>
